@@ -1,5 +1,5 @@
-o Support non-text web responses
 o Support <META HTTP_EQUIV=REFRESH tags>
+o Support IFRAME tag
 o Support reset button detection
 o Support _new frame tag
 o Send parameters in proper (HTML-file) order
